2011-11-26  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the strange behavior on moving the
	cursor according to logical lines. Thanks to lemit who reported
	the problem.
	(twittering-mode-setup): bind `inhibit-field-text-motion' to
	non-nil as a buffer-local variable. If it is nil, the field
	property attached tweets interferes with the cursor motion based
	on logical lines.

	* twittering-mode.el: Store the tweet parameters, `truncated' and
	`user-protected', as boolean parameters.
	(twittering-normalize-raw-status): store the `truncated' and
	`user-protected' parameters as boolean parameters.
	(twittering-generate-format-table): use the `truncated' and
	`user-protected' parameters as boolean.
	(twittering-organic-retweet): likewise.
	* test/test-twittering-mode.el: Update tests to follow the change
	of internal representation of a tweet.
	* test/fixture/timeline-data.el: Update data to follow the change
	of internal representation of a tweet.

	* twittering-mode.el: Store the tweet parameter `created-at' as
	Emacs internal time representation. This avoids parsing a time
	string whenever a tweet is re-rendered.
	(twittering-atom-xmltree-to-status-datum): store `created-at' as
	Emacs internal time representation.
	(twittering-normalize-raw-status): likewise.
	(twittering-created-at-to-seconds): removed.
	(twittering-generate-format-table): use the parameters
	`created-at' as Emacs internal time representation.
	(twittering-generate-formater-for-first-spec): likewise.
	* test/test-twittering-mode.el: Update tests to follow the change
	of internal representation of a tweet.
	* test/fixture/timeline-data.el: Update data to follow the change
	of internal representation of a tweet.

	* twittering-mode.el: `twittering-call-api' receives `sentinel' as
	an argument for the command `retrieve-timeline'.
	(twittering-call-api): receive `sentinel' as an argument for
	the command `retrieve-timeline'.
